# libredfish

./: .gitignore  Cargo.toml  LICENSE
src/: bios.rs  common.rs  dell.rs  error.rs  hpe.rs  lenovo.rs  lib.rs  network.rs  nvidia.rs  nvidia_dpu.rs  nvidia_gbswitch.rs  nvidia_gbx00.rs  nvidia_viking.rs  power.rs  standard.rs  storage.rs  supermicro.rs  system.rs  thermal.rs
src/manager/: dell.rs  hp.rs  mod.rs
src/model/: account_service.rs  bios.rs  boot.rs  certificate.rs  chassis.rs  component_integrity.rs  error.rs  ethernet_interface.rs  job.rs  manager.rs  manager_network_protocol.rs  mod.rs  network_device_function.rs  port.rs  power.rs  resource.rs  secure_boot.rs  sel.rs  sensor.rs  serial_interface.rs  service_root.rs  software_inventory.rs  storage.rs  system.rs  task.rs  thermal.rs  update_service.rs
src/model/oem/: dell.rs  hpe.rs  lenovo.rs  mod.rs  nvidia.rs  nvidia_dpu.rs  nvidia_viking.rs  supermicro.rs
src/model/testdata/: supermicro_service_root.json
tests/: integration_test.rs  redfishMockupServer.py
tests/mockups/: README
tests/mockups/dell/: README
tests/mockups/dell/redfish/v1/: index.json
tests/mockups/dell_multi_dpu/: README
tests/mockups/dell_multi_dpu/redfish/v1/: index.json
tests/mockups/forbidden/: README
tests/mockups/hpe/: README
tests/mockups/hpe/redfish/v1/: index.json
tests/mockups/lenovo/: README
tests/mockups/lenovo/redfish/v1/: index.json
tests/mockups/nvidia_dpu/: README
tests/mockups/nvidia_gb200/: README
tests/mockups/nvidia_viking/: README
tests/mockups/supermicro/: README
(+12327 files in other folders)
