[package]
name = "libredfish"
description = "A redfish library. Useful for querying server hardware from a BMC."
authors = ["Chris Holcombe <xfactor973@gmail.com>", "NVIDIA Engineering"]
repository = "https://gitlab-master.nvidia.com/nvmetal/libredfish"
documentation = "https://docs.rs/libredfish"
license = "MIT"
version = "0.8.9"
edition = "2021"

[dependencies]
log = "0.4"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_derive = "1"
serde = "1"
serde_with = "2.1"
serde_json = "1"
tracing = { version = "0.1", registry = "cratesio" }
thiserror = { version = "1", registry = "cratesio" }

[dev-dependencies]
anyhow = { version = "1", registry = "cratesio" }
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }

